--- a/index.html
+++ b/index.html
@@ -306,6 +306,9 @@
             </div>
             </div>
     </footer>
+
+    <!--==============================BACKDROP==========================-->
+
     <div class="backdrop is-hidden" data-modal>
         <div class="modal" >
             <button class="close-button" type="button" data-modal-close>
@@ -313,6 +316,52 @@
                     <use href="./img/sprite.svg#close"></use>
                 </svg>
             </button>
+        <form action="#" class="position-form">
+            <p class="data-form">Оставьте свои данные, мы вам перезвоним</p>
+            <label class="modal-form-position">
+                Имя
+                <span class="modal-form-position-name">
+                    <input type="text" class="modal-input-form" name="user-name" minlength="2" pattern="[a-zA-Za-яёА-ЯЁ]+"
+                        title="Имя должно содержать символы кирилицы или латиницы" required>
+                    <svg class="modal-form-icon" width=12px height=12px>
+                        <use href="./img/sprite.svg#name"></use>
+                    </svg>
+                </span>
+            </label>
+            <label class="modal-form-position">
+                Телефон
+                <span class="modal-form-position-name">
+                    <input type="text" class="modal-input-form" name="number-client" minlength="7" pattern="[0-9]{3}-[0-9]{3}-[0-9]{2}-[0-9]{2}"
+                        title="096-000-00-00" required>
+                    <svg class="modal-form-icon" width=13px height=13px>
+                        <use href="./img/sprite.svg#phonenumber"></use>
+                    </svg>
+                </span>
+            </label>
+            <label class="modal-form-position">
+                Почта
+                <span class="modal-form-position-name">
+                    <input type="text" class="modal-input-form" name="mail-client" minlength="5"
+                        pattern="[a-zA-Za-0-9]-[@]-[a-zA-Za]-[.]-[a-zA-Za]" title="Почта должна содержать символы латиницы с использованием знака @" required>
+                    <svg class="modal-form-icon" width=15px height=12px>
+                        <use href="./img/sprite.svg#email"></use>
+                    </svg>
+                </span>
+            </label>
+            <label class="modal-form-position">
+                Комментарий
+                <textarea name="user-message" class="modal-textarea-form" placeholder="Введите текст"></textarea>
+            </label>
+            <input type="checkbox" class="modal-form-checkbox chekbox-hidden" id="accept-policy">
+            <label for="accept-policy" class="modal-form-checkbox-label">Соглашаюсь с рассылкой и принимаю&nbsp;<a href="#"
+                    class="modal-form-label-link">Условия договора</a></label>
+            <button type="submit" class="modal-form-button">Отправить</button>
+
+
+
+        </form>
+
+
         </div>
     </div>
 
