--- a/index.html
+++ b/index.html
@@ -272,38 +272,55 @@
             <div class="position-address-link">
                 <a class="footer-link" href="index.html"><span class="logo-three-letters">Web</span>Studio</a>
                 <h2 class="link-sign">присоединяйтесь</h2>
+                <p class="subscribe-position">Подпишитесь на рассылку</p>
             </div>
             <div class="footer-position-link-sign">
-            <address class="address-position">
-                <p class="footer-living">г. Киев, пр-т Леси Украинки, 26</p>
-                <ul>    
-                    <li class="address-mail-position"><a class="address-mail" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                    <li class="address-phone-position"><a class="address-phone" href="tel:+380961111111">+38 096 111 11 11</a></li>
-                </ul>
-            </address>
-                <div class="sign-logo-position">
-                    <a class="sign-logo-background" href="./">
-                        <svg class="sign-logo" width=20px height=20px>
-                            <use href="./img/sprite.svg#instagram"></use>
+                <address class="address-position">
+                    <p class="footer-living">г. Киев, пр-т Леси Украинки, 26</p>
+                    <ul>    
+                        <li class="address-mail-position"><a class="address-mail" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                        <li class="address-phone-position"><a class="address-phone" href="tel:+380961111111">+38 096 111 11 11</a></li>
+                    </ul>
+                </address>
+                    <div class="sign-logo-position">
+                        <a class="sign-logo-background" href="./">
+                            <svg class="sign-logo" width=20px height=20px>
+                                <use href="./img/sprite.svg#instagram"></use>
+                            </svg>
+                        </a>
+                        <a class="sign-logo-background" href="./">
+                            <svg class="sign-logo" width=20px height=20px>
+                                <use href="./img/sprite.svg#twitter"></use>
+                            </svg>
+                        </a>
+                        <a class="sign-logo-background" href="./">
+                            <svg class="sign-logo" width=20px height=20px>
+                                <use href="./img/sprite.svg#facebook"></use>
+                            </svg>
+                        </a>
+                        <a class="sign-logo-background" href="./">
+                            <svg class="sign-logo" width=20px height=20px>
+                                <use href="./img/sprite.svg#linkedin"></use>
+                            </svg>
+                        </a>
+                    </div>
+                    <label class="footer-subscribe">
+                        <span class="footer-subscribe-input-position">
+                            <input type="text" class="footer-subscribe-input" name="mail-client-subscribe" minlength="5"
+                                pattern="[a-zA-Za-0-9]-[@]-[a-zA-Za]-[.]-[a-zA-Za]" placeholder="E-mail"
+                                title="Почта должна содержать символы латиницы с использованием знака @" required>
+                        </span>
+                    </label>
+                    <button type="submit" class="footer-subscribe-button">Подписаться
+                        <svg class="footer-subscribe-icon" width=24px height=24px>
+                            <use href="./img/sprite.svg#send"></use>
                         </svg>
-                    </a>
-                    <a class="sign-logo-background" href="./">
-                        <svg class="sign-logo" width=20px height=20px>
-                            <use href="./img/sprite.svg#twitter"></use>
-                        </svg>
-                    </a>
-                    <a class="sign-logo-background" href="./">
-                        <svg class="sign-logo" width=20px height=20px>
-                            <use href="./img/sprite.svg#facebook"></use>
-                        </svg>
-                    </a>
-                    <a class="sign-logo-background" href="./">
-                        <svg class="sign-logo" width=20px height=20px>
-                            <use href="./img/sprite.svg#linkedin"></use>
-                        </svg>
-                    </a>
+                    </button>
+                    <!--<input type="checkbox" class="modal-form-checkbox visually-hidden" id="accept-policy">
+                    <label for="accept-policy" class="modal-form-checkbox-label">Соглашаюсь с рассылкой и принимаю&nbsp;<a href="#"
+                            class="modal-form-label-link">Условия договора</a></label>
+                    <button type="submit" class="modal-form-button">Отправить</button>-->
                 </div>
-            </div>
             </div>
     </footer>
 
@@ -316,58 +333,49 @@
                     <use href="./img/sprite.svg#close"></use>
                 </svg>
             </button>
-        <form action="#" class="position-form">
-            <p class="data-form">Оставьте свои данные, мы вам перезвоним</p>
-            <label class="modal-form-position">
-                Имя
-                <span class="modal-form-position-name">
-                    <input type="text" class="modal-input-form" name="user-name" minlength="2" pattern="[a-zA-Za-яёА-ЯЁ]+"
-                        title="Имя должно содержать символы кирилицы или латиницы" required>
-                    <svg class="modal-form-icon" width=12px height=12px>
-                        <use href="./img/sprite.svg#name"></use>
-                    </svg>
-                </span>
-            </label>
-            <label class="modal-form-position">
-                Телефон
-                <span class="modal-form-position-name">
-                    <input type="text" class="modal-input-form" name="number-client" minlength="7" pattern="[0-9]{3}-[0-9]{3}-[0-9]{2}-[0-9]{2}"
-                        title="096-000-00-00" required>
-                    <svg class="modal-form-icon" width=13px height=13px>
-                        <use href="./img/sprite.svg#phonenumber"></use>
-                    </svg>
-                </span>
-            </label>
-            <label class="modal-form-position">
-                Почта
-                <span class="modal-form-position-name">
-                    <input type="text" class="modal-input-form" name="mail-client" minlength="5"
-                        pattern="[a-zA-Za-0-9]-[@]-[a-zA-Za]-[.]-[a-zA-Za]" title="Почта должна содержать символы латиницы с использованием знака @" required>
-                    <svg class="modal-form-icon" width=15px height=12px>
-                        <use href="./img/sprite.svg#email"></use>
-                    </svg>
-                </span>
-            </label>
-            <label class="modal-form-position">
-                Комментарий
-                <textarea name="user-message" class="modal-textarea-form" placeholder="Введите текст"></textarea>
-            </label>
-            <input type="checkbox" class="modal-form-checkbox chekbox-hidden" id="accept-policy">
-            <label for="accept-policy" class="modal-form-checkbox-label">Соглашаюсь с рассылкой и принимаю&nbsp;<a href="#"
-                    class="modal-form-label-link">Условия договора</a></label>
-            <button type="submit" class="modal-form-button">Отправить</button>
-
-
-
-        </form>
-
-
+            <form action="#" class="position-form">
+                <p class="data-form">Оставьте свои данные, мы вам перезвоним</p>
+                <label class="modal-form-position">
+                    Имя
+                    <span class="modal-form-position-name">
+                        <input type="text" class="modal-input-form" name="user-name" minlength="2" pattern="[a-zA-Za-яёА-ЯЁ]+"
+                            title="Имя должно содержать символы кирилицы или латиницы" required>
+                        <svg class="modal-form-icon" width=12px height=12px>
+                            <use href="./img/sprite.svg#name"></use>
+                        </svg>
+                    </span>
+                </label>
+                <label class="modal-form-position">
+                    Телефон
+                    <span class="modal-form-position-name">
+                        <input type="text" class="modal-input-form" name="number-client" minlength="7" pattern="[0-9]{3}-[0-9]{3}-[0-9]{2}-[0-9]{2}"
+                            title="096-000-00-00" required>
+                        <svg class="modal-form-icon" width=13px height=13px>
+                            <use href="./img/sprite.svg#phonenumber"></use>
+                        </svg>
+                    </span>
+                </label>
+                <label class="modal-form-position">
+                    Почта
+                    <span class="modal-form-position-name">
+                        <input type="text" class="modal-input-form" name="mail-client" minlength="5"
+                            pattern="[a-zA-Za-0-9]-[@]-[a-zA-Za]-[.]-[a-zA-Za]" title="Почта должна содержать символы латиницы с использованием знака @" required>
+                        <svg class="modal-form-icon" width=15px height=12px>
+                            <use href="./img/sprite.svg#email"></use>
+                        </svg>
+                    </span>
+                </label>
+                <label class="modal-form-position">
+                    Комментарий
+                    <textarea name="user-message" class="modal-textarea-form" placeholder="Введите текст"></textarea>
+                </label>
+                <input type="checkbox" class="modal-form-checkbox visually-hidden" id="accept-policy">
+                <label for="accept-policy" class="modal-form-checkbox-label">Соглашаюсь с рассылкой и принимаю&nbsp; 
+                    <a href="#" class="modal-form-label-link">Условия договора</a></label>
+                <button type="submit" class="modal-form-button">Отправить</button>
+            </form>
         </div>
     </div>
-
-
-
-
     <script src="./js/modal.js"></script>
 </body>
 
