--- a/index.html
+++ b/index.html
@@ -371,10 +371,11 @@
                 </label>
                 <label class="modal-button-position">
                     <input type="checkbox" class="modal-form-checkbox visually-hidden" id="accept-policy">
-                    <label for="accept-policy" class="modal-form-checkbox-label">Соглашаюсь с рассылкой и принимаю&nbsp; 
+                    <label for="accept-policy" class="modal-form-checkbox-label">&nbsp;Соглашаюсь с рассылкой и принимаю&nbsp; 
                         <a href="#" class="modal-form-label-link">Условия договора</a></label>
-                    <button type="submit" class="modal-form-button">Отправить</button>
+                    
                 </label>
+                <button type="submit" class="modal-form-button">Отправить</button>
             </form>
         </div>
     </div>
